<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="calculadora_de_imc">Calculadora de IMC</string>
    <string name="insira_suas_informacoes_abaixo">Insira suas informações abaixo</string>
    <string name="altura_cm">Altura (cm)</string>
    <string name="peso_kg">Peso (kg)</string>
    <string name="imc">IMC</string>
    <string name="imc_default_value">0.0</string>
    <string name="abaixo">Abaixo</string>
    <string name="normal">Normal</string>
    <string name="acima">Acima</string>
    <string name="calcular">Calcular</string>
    <string name="ou">ou</string>
    <string name="go4all">Go 4all</string>
</resources>